[workspace]
members = [

#  # the rust implementation of the protocol TCPLS
#    "rTcpls",
  # tests and example code
    "examples",
  # the main library and tests
    "rustls",
    "octets",
]
exclude = ["admin/rustfmt"]
resolver = "2"

[profile.release]
debug = true

[profile.performance]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
