[workspace]
members = [

  # CI benchmarks
  "ci-bench",
  # Tests that require OpenSSL
  "openssl-tests",
  # Network-based tests
  "connect-tests",
  # tests and example code
  "examples",
  # the main library and tests
  "rustls",
  # example of custom provider
  "provider-example",
  "octets",
]
default-members = [
  "examples",
  "rustls",
]
exclude = ["admin/rustfmt"]
resolver = "2"

[profile.bench]
debug = true

[profile.release]
debug = true

[profile.performance]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false


