[package]
name = "rTcpls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dangerous_configuration = ["rustls/dangerous_configuration"]
quic = ["rustls/quic"]

[dependencies]
docopt = "~1.1"
env_logger = "0.9.0" # 0.10 requires an MSRV bump to 1.60
log = { version = "0.4.4" }
mio = { version = "0.8", features = ["net", "os-poll"] }
rustls = { path = "../rustls", features = [ "logging" ]}
rustls-pemfile = "1.0.0"
sct = "0.7"
serde = "1.0"
serde_derive = "1.0"
webpki-roots = "0.23"

[dev-dependencies]
regex = "1.0"
ring = "0.16.20"

